IF(BGPM)
    INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${ROSS_BINARY_DIR} ${ROSSIO_SOURCE_DIR} ${BGPM_LIB})
ELSE(NOT(BGPM))
    INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${ROSS_BINARY_DIR} ${ROSSIO_SOURCE_DIR})
ENDIF(BGPM)

## Print PHOLD-IO Hash
LIST(APPEND CMAKE_MODULE_PATH "${ROSS_SOURCE_DIR}/cmake/")
INCLUDE(GetGitRevisionDescription)
GET_GIT_HEAD_REVISION(GIT_RESPEC_PH GIT_SHA1_PH)

## Build Configuration File
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/phold-config.h.in ${CMAKE_CURRENT_BINARY_DIR}/phold-config.h @ONLY)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/phold-config.h.in PROPERTIES GENERATED FALSE)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/phold-config.h PROPERTIES GENERATED TRUE)

SET(phold_srcs
    phold.c     
    phold.h
    phold-config.h)

ADD_EXECUTABLE(phold ${phold_srcs})

IF(BGPM)
    TARGET_LINK_LIBRARIES(phold ROSS ROSSIO imp_bgpm m)   
ELSE(NOT(BGPM))
    TARGET_LINK_LIBRARIES(phold ROSS ROSSIO m)   
ENDIF(BGPM)
