IF(BGPM)
    INCLUDE_DIRECTORIES(${BGPM_LIB})
ENDIF(BGPM)

## ROSS
INCLUDE_DIRECTORIES(${ROSS_SOURCE_DIR} ${ROSS_BINARY_DIR})

## RIO
INCLUDE_DIRECTORIES(${RIO_SOURCE_DIR} ${RIO_BINARY_DIR})

## Print PHOLD-IO Hash
LIST(APPEND CMAKE_MODULE_PATH "${ROSS_SOURCE_DIR}/cmake/")
INCLUDE(GetGitRevisionDescription)
GET_GIT_HEAD_REVISION(GIT_RESPEC_PH GIT_SHA1_PH)

## Build Configuration File
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/phold-config.h.in ${CMAKE_CURRENT_BINARY_DIR}/phold-config.h @ONLY)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_SOURCE_DIR}/phold-config.h.in PROPERTIES GENERATED FALSE)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_CURRENT_BINARY_DIR}/phold-config.h PROPERTIES GENERATED TRUE)

SET(phold_srcs
    phold.c
    phold.h
    phold-config.h)

ADD_EXECUTABLE(pholdio ${phold_srcs})

IF(BGPM)
    TARGET_LINK_LIBRARIES(pholdio ROSS RIO imp_bgpm m)
ELSE(NOT(BGPM))
    TARGET_LINK_LIBRARIES(pholdio ROSS RIO m)
ENDIF(BGPM)
